--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.3",
-    "@electron/remote": "^1.0.2",
     "@craco/craco": "^6.2.0",
+    "@electron/remote": "^1.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
-    "electron-is-dev": "^2.0.0",
     "craco-less": "^1.19.0",
+    "electron-is-dev": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.15"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
